<resources>
    <string name="app_name">Balloons World</string>
    <string name="playerTV">Player:</string>
    <string name="playernameET">Enter your name</string>
    <string name="acceptBtn">Accept</string>
    <string name="helloTV">Hello</string>
    <string name="startBtn">Start</string>
    <string name="exitBtn">Exit</string>
    <string name="high_scoresBtn">High scores</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="levels">Levels</string>
    <string name="back">Back</string>
    <string name="tutorial">Tutorial</string>
    <string name="game_over">Game over!</string>
    <string name="try_again">Try again</string>
    <string name="return_to_menu">Return to menu</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="game_paused">Game paused</string>
    <string name="high_scores">High Scores</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="uses_accelerometer">The game uses accelerometer</string>
    <string name="to_control">to control the ballon</string>
    <string name="follow_the_next">Follow the next instructions</string>
    <string name="to_finish_tutorial">to finish the tutorial</string>
    <string name="tilt_your_phone">Tilt your phone to the</string>
    <string name="most_right">right and touch the most right</string>
    <string name="good_job">Good job!</string>
    <string name="now_to_the_left">Now to the left</string>
    <string name="your_doing_great">Your doing great!</string>
    <string name="now_catch">Now catch the coin</string>
    <string name="excellent">Excellent!</string>
    <string name="final_drill">And for the final drill</string>
    <string name="avoid">Avoid the following obstacle</string>
    <string name="congratulations_you_finished_the_turtorial">Congratulations! You finished the turtorial</string>
</resources>
