<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        style="@style/background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloTV"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/helloUserTV"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsRL"
        android:layout_centerInParent="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startBtn"
            android:text="@string/startBtn"
            android:background="@drawable/green_btn"
            android:alpha="0.9"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exitBtn"
            android:layout_below="@+id/startBtn"
            android:text="@string/exitBtn"
            android:background="@drawable/red_btn"
            android:alpha="0.9"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/highScoresBtn"
            android:layout_below="@+id/exitBtn"
            android:text="@string/high_scoresBtn"
            android:alpha="0.9"
            android:background="@drawable/yellow_btn"/>
    </RelativeLayout>
</RelativeLayout>