<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        style="@style/background_pause_game"
        android:layout_width="match_parent"
        android:layout_height="318dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_you_finished_the_turtorial"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/endMenuTitleTutorialTV"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/endMenuTitleTutorialTV"
        android:layout_centerHorizontal="true"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:background="@drawable/green_btn"
        android:id="@+id/tryAgainTutorialBtn"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tryAgainTutorialBtn"
        android:layout_centerHorizontal="true"
        android:text="@string/return_to_menu"
        android:id="@+id/returnToMenuTutorialBtn"
        android:background="@drawable/yellow_btn"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:padding="10dp"
        />

</RelativeLayout>